Fix: header height on mobile

--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@ html {
   font-family: 'Montserrat', sans-serif;
 }
 
-/* body {
-	display: flex;
-  	flex-direction: column;
-  } */
 
 header {
   /* position: absolute; */
@@ -97,7 +93,7 @@ section span {
 
 @media (max-width: 840px) {
   header {
-    height: 50%;
+    height: 60%;
   }
   header img.logo {
     width: 200px;
